--- a/california_cleaned_df.ipynb
+++ b/california_cleaned_df.ipynb
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d73a18d2",
+   "id": "c5307409",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5efc7178",
+   "id": "c7b14eb3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -601,22 +601,21 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "638afd11",
+   "id": "9f9a0534",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Filter Data for months involved with Day Light Savings\n",
     "final_df = cleaned_df.loc[(cleaned_df[\"month\"] == 2) | \n",
     "               (cleaned_df[\"month\"] == 3) |\n",
     "               (cleaned_df[\"month\"] == 10) |\n",
-    "              (cleaned_df[\"month\"] == 11), :]\n",
-    "#df.to_csv('file_name.csv')\n",
-    "#final_df.to_csv(\"california_accidents.zip\", index = False, compression = \"zip\")"
+    "              (cleaned_df[\"month\"] == 11), :]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1930fb9e",
+   "id": "6c13c690",
    "metadata": {},
    "outputs": [
     {
@@ -631,23 +630,26 @@
     }
    ],
    "source": [
-    "len(final_df)"
+    "#Check len of final df\n",
+    "#Df is to large to upload to github so we will create a new df with a smaller random sample.\n",
+    "#len(final_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "231de5d4",
+   "id": "fd1c974a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Random sample for project use\n",
     "sample_df = final_df.sample(n = 100000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "852ca849",
+   "id": "8d770c18",
    "metadata": {},
    "outputs": [
     {
@@ -662,13 +664,14 @@
     }
    ],
    "source": [
-    "len(sample_df)"
+    "#Check length. MB size is good for upload to github\n",
+    "#len(sample_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "16f3b65f",
+   "id": "6c4f7506",
    "metadata": {},
    "outputs": [
     {
@@ -879,23 +882,96 @@
     }
    ],
    "source": [
-    "sample_df.head()"
+    "#check df \n",
+    "#sample_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "40217632",
+   "id": "329b508b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Convert dataframe to csv file for upload to github\n",
     "sample_df.to_csv(\"california_sample.csv\")"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "4fd3abb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Arizona Dataframe\n",
+    "#Filter out unnecessary columns\n",
+    "#filter only for Arizona data\n",
+    "start_df = accidents_df.loc[(accidents_df[\"State\"] == \"CA\"), :]\n",
+    "ari_df = start_df[['ID', 'Severity', 'Start_Time', 'Start_Lat', 'Start_Lng', 'Description',\n",
+    "                      'City', 'County', 'State', 'Zipcode', 'Country', 'Timezone',\n",
+    "                      'Weather_Timestamp', 'Temperature(F)', 'Wind_Chill(F)', 'Humidity(%)',\n",
+    "                      'Pressure(in)', 'Visibility(mi)', 'Wind_Direction', 'Wind_Speed(mph)', \n",
+    "                      'Precipitation(in)', 'Weather_Condition', 'Crossing', 'Junction', \n",
+    "                      'No_Exit', 'Station', 'Stop', 'Traffic_Signal', 'Sunrise_Sunset']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "be96cf55",
+   "id": "275af00b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a new columns for data and time to be spilt up\n",
+    "#10 days before late oct early nov\n",
+    "#10 days after late feb early march\n",
+    "ari_df[[\"date\", \"time\"]] = ari_df[\"Start_Time\"].str.split(\" \", expand = True)\n",
+    "ari_df[[\"year\", \"month\", \"day\"]] = ari_df[\"date\"].str.split(\"-\", expand = True)\n",
+    "ari_df[[\"year\", \"month\", \"day\"]] = ari_df[[\"year\", \"month\", \"day\"]].astype(int)\n",
+    "ari_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3fe81ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filter Data for months involved with Day Light Savings\n",
+    "arizona_df = ari_df.loc[(ari_df[\"month\"] == 2) | \n",
+    "               (ari_df[\"month\"] == 3) |\n",
+    "               (ari_df[\"month\"] == 10) |\n",
+    "              (ari_df[\"month\"] == 11), :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "28f7ef25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random sample for project use\n",
+    "arizona_sample_df = arizona_df.sample(n = 100000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "18f1d7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert dataframe to csv file for upload to github\n",
+    "arizona_sample_df.to_csv(\"arizona_sample.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc21566",
    "metadata": {},
    "outputs": [],
    "source": []
