Corrected typo in arizona dataframe

--- a/california_cleaned_df.ipynb
+++ b/california_cleaned_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "e4825b59",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1ec18dd3",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c5307409",
+   "id": "1911533f",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7b14eb3",
+   "id": "767b0d38",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9f9a0534",
+   "id": "4a5e697b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6c13c690",
+   "id": "e4e8c532",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fd1c974a",
+   "id": "2b0b2cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8d770c18",
+   "id": "38d655ce",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6c4f7506",
+   "id": "2fce84a6",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "329b508b",
+   "id": "fa28d563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,15 +899,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "4fd3abb6",
+   "execution_count": 4,
+   "id": "16aaa77f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Arizona Dataframe\n",
     "#Filter out unnecessary columns\n",
     "#filter only for Arizona data\n",
-    "start_df = accidents_df.loc[(accidents_df[\"State\"] == \"CA\"), :]\n",
+    "start_df = accidents_df.loc[(accidents_df[\"State\"] == \"AZ\"), :]\n",
     "ari_df = start_df[['ID', 'Severity', 'Start_Time', 'Start_Lat', 'Start_Lng', 'Description',\n",
     "                      'City', 'County', 'State', 'Zipcode', 'Country', 'Timezone',\n",
     "                      'Weather_Timestamp', 'Temperature(F)', 'Wind_Chill(F)', 'Humidity(%)',\n",
@@ -918,10 +918,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "275af00b",
+   "execution_count": 5,
+   "id": "d662c6e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Jerry/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py:3641: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Severity</th>\n",
+       "      <th>Start_Time</th>\n",
+       "      <th>Start_Lat</th>\n",
+       "      <th>Start_Lng</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>City</th>\n",
+       "      <th>County</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Zipcode</th>\n",
+       "      <th>...</th>\n",
+       "      <th>No_Exit</th>\n",
+       "      <th>Station</th>\n",
+       "      <th>Stop</th>\n",
+       "      <th>Traffic_Signal</th>\n",
+       "      <th>Sunrise_Sunset</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>91178</th>\n",
+       "      <td>A-91179</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2016-11-30 13:35:51</td>\n",
+       "      <td>34.875803</td>\n",
+       "      <td>-114.59780</td>\n",
+       "      <td>Closed at CR-153/Boundary Cone Rd/Soatman Rd -...</td>\n",
+       "      <td>Mohave Valley</td>\n",
+       "      <td>Mohave</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>86440</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>2016-11-30</td>\n",
+       "      <td>13:35:51</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91179</th>\n",
+       "      <td>A-91180</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-11-30 15:01:56</td>\n",
+       "      <td>33.662770</td>\n",
+       "      <td>-111.99958</td>\n",
+       "      <td>At AZ-101-LOOP/Exit 15 - Accident.</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>Maricopa</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>85050</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>2016-11-30</td>\n",
+       "      <td>15:01:56</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91180</th>\n",
+       "      <td>A-91181</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-11-30 15:19:52</td>\n",
+       "      <td>33.668760</td>\n",
+       "      <td>-112.07275</td>\n",
+       "      <td>At 7th St/Exit 26 - Accident.</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>Maricopa</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>85024</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>2016-11-30</td>\n",
+       "      <td>15:19:52</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91181</th>\n",
+       "      <td>A-91182</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-11-30 15:39:50</td>\n",
+       "      <td>33.385630</td>\n",
+       "      <td>-111.95325</td>\n",
+       "      <td>At Priest Dr/Exit 172 - Accident.</td>\n",
+       "      <td>Tempe</td>\n",
+       "      <td>Maricopa</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>85282</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>2016-11-30</td>\n",
+       "      <td>15:39:50</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91182</th>\n",
+       "      <td>A-91183</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016-11-30 17:05:39</td>\n",
+       "      <td>33.484250</td>\n",
+       "      <td>-112.11319</td>\n",
+       "      <td>At Thomas Rd/Exit 201 - Accident.</td>\n",
+       "      <td>Phoenix</td>\n",
+       "      <td>Maricopa</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>85015</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>2016-11-30</td>\n",
+       "      <td>17:05:39</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ID  Severity           Start_Time  Start_Lat  Start_Lng  \\\n",
+       "91178  A-91179         4  2016-11-30 13:35:51  34.875803 -114.59780   \n",
+       "91179  A-91180         3  2016-11-30 15:01:56  33.662770 -111.99958   \n",
+       "91180  A-91181         2  2016-11-30 15:19:52  33.668760 -112.07275   \n",
+       "91181  A-91182         2  2016-11-30 15:39:50  33.385630 -111.95325   \n",
+       "91182  A-91183         2  2016-11-30 17:05:39  33.484250 -112.11319   \n",
+       "\n",
+       "                                             Description           City  \\\n",
+       "91178  Closed at CR-153/Boundary Cone Rd/Soatman Rd -...  Mohave Valley   \n",
+       "91179                 At AZ-101-LOOP/Exit 15 - Accident.        Phoenix   \n",
+       "91180                      At 7th St/Exit 26 - Accident.        Phoenix   \n",
+       "91181                  At Priest Dr/Exit 172 - Accident.          Tempe   \n",
+       "91182                  At Thomas Rd/Exit 201 - Accident.        Phoenix   \n",
+       "\n",
+       "         County State Zipcode  ... No_Exit Station   Stop  Traffic_Signal  \\\n",
+       "91178    Mohave    AZ   86440  ...   False   False  False           False   \n",
+       "91179  Maricopa    AZ   85050  ...   False   False  False           False   \n",
+       "91180  Maricopa    AZ   85024  ...   False   False  False           False   \n",
+       "91181  Maricopa    AZ   85282  ...   False   False  False           False   \n",
+       "91182  Maricopa    AZ   85015  ...   False   False  False           False   \n",
+       "\n",
+       "       Sunrise_Sunset        date      time  year month  day  \n",
+       "91178             Day  2016-11-30  13:35:51  2016    11   30  \n",
+       "91179             Day  2016-11-30  15:01:56  2016    11   30  \n",
+       "91180             Day  2016-11-30  15:19:52  2016    11   30  \n",
+       "91181             Day  2016-11-30  15:39:50  2016    11   30  \n",
+       "91182             Day  2016-11-30  17:05:39  2016    11   30  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create a new columns for data and time to be spilt up\n",
     "#10 days before late oct early nov\n",
@@ -934,8 +1153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "3fe81ea5",
+   "execution_count": 6,
+   "id": "6b56d28e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,19 +1167,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "28f7ef25",
+   "execution_count": 9,
+   "id": "f8d2be02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18506"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Random sample for project use\n",
-    "arizona_sample_df = arizona_df.sample(n = 100000)"
+    "len(arizona_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "18f1d7f3",
+   "execution_count": 10,
+   "id": "690243bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random sample for project use\n",
+    "arizona_sample_df = arizona_df.sample(n = 18506)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "50a14581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bc21566",
+   "id": "291243c7",
    "metadata": {},
    "outputs": [],
    "source": []
