--- a/california_merge_df.ipynb
+++ b/california_merge_df.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# Is Daylight Saving Time a Killer?\n",
+    "Let's take a look at the accidents for CA and AZ in the years 2016-2021! \n",
+    "\n",
+    "\n",
     "Gerardo Angulo, Tim Gannaway, Nikki Ryan, Rebecca Watson, Yuntian Xue"
    ]
   },
@@ -1398,26 +1401,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ******Line graph for spring in California\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ******Line graph for fall in California\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1479,9 +1462,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Talk about chi-squre test & results \n",
+    "Chi-squre test results for total accidents in California for the fall DST change (comparing before and after the DST change):\n",
     "\n",
-    "\n"
+    "This low critical value along with a high statistic value many times greater, shows this test is statistically significant. With a very small p-value, we see that these two data sets are very different. "
    ]
   },
   {
@@ -1546,9 +1529,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Talk about chi-squre test results \n",
+    "Chi-squre test results for total accidents in California for the spring DST change (comparing before and after the DST change):\n",
     "\n",
-    "\n"
+    "This low critical value along with a low statistic value, smaller than the critical value, shows this test is not statistically significant. With a realatively large p-value, we see that these two data sets are more similar than different, somewhat overlapping. "
    ]
   },
   {
@@ -1776,7 +1759,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**** What does this show"
+    "Chi-squre test results for level 2 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
+    "\n",
+    "This low critical value along with a low statistic value, shows this test is not statistically significant. With a smaller p-value, we see that these two data sets are not too similar. "
    ]
   },
   {
@@ -1828,7 +1813,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***WHat does this show??"
+    "Chi-squre test results for level 2 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
+    "\n",
+    "This low critical value along with a very high statistic value, shows this test is statistically significant. With a very small p-value, we see that these two data sets are not similar, they would not have much overlap. "
    ]
   },
   {
@@ -1943,8 +1930,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*** this shows?? \n",
-    "\n"
+    "Chi-squre test results for level 4 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
+    "\n",
+    "This low critical value along with a very low statistic value many times smaller, shows this test is not statistically significant. With a large p-value, we see that these two data sets are very similar. "
    ]
   },
   {
@@ -1996,8 +1984,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*** this show?? \n",
-    "\n"
+    "Chi-squre test results for level 4 severity accidents in California for the fall DST change (comparing before and after the DST change):\n",
+    "\n",
+    "This low critical value along with a low statistic value, shows this test is not statistically significant. With an average p-value, we see that these two data sets might have some overlap. "
    ]
   },
   {
@@ -2055,26 +2044,6 @@
     "plt.xticks(np.arange(4), xticks)\n",
     "plt.ylabel('Total Number of Accidents')\n",
     "plt.title('Total Number of Accidents in Arizona')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Line graph for spring in Arizona \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Line graph for fall in Arizona\n",
-    "\n"
    ]
   },
   {
@@ -2524,6 +2493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We looked at the the percent changes from before to after the DST switch for CA and AZ in both the spring and fall. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -2552,21 +2528,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#**** Percent change from (avg) California spring to (avg) California fall\n",
+    "Then, we compared spring accident rate to fall accident rate, overall."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent change in CA from Spring to Fall: 95.3%\n",
+      "Percent change in AZ from Spring to Fall: 186.96%\n"
+     ]
+    }
+   ],
+   "source": [
+    "percent_change_ca_avgspring_to_avgfall = ((((10723+12340)/2)-((5849+5960)/2)))/((5849+5960)/2)*100\n",
+    "percent_change_az_avgspring_to_avgfall = ((((2157+2199)/2)-((805+713)/2)))/((805+713)/2)*100\n",
     "\n",
-    "#**** Percent change from (avg) Arizona spring to (avg) Arizona fall\n"
+    "print(f'Percent change in CA from Spring to Fall: {round(percent_change_ca_avgspring_to_avgfall,2)}%')\n",
+    "print(f'Percent change in AZ from Spring to Fall: {round(percent_change_az_avgspring_to_avgfall,2)}%')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***** Final observations:\n"
+    "Final observations:\n",
+    "\n",
+    "Our alternate hypothesis was proved in the measures of overall accident frequency, non-severe accident frequency, and severe accident frequency, but this was proved only in the Fall \"DST off\" event and not in the Spring \"DST on\" event. \n",
+    "\n",
+    "Useful public warning information regarding Fall Daylight Savings time change is: \"In the 10 days after the November time change each year, the chances of being in an accident, whether severe or not, are increased by 15% from the prior 10 days\""
    ]
   }
  ],
