--- a/california_merge_df.ipynb
+++ b/california_merge_df.ipynb
@@ -2305,6 +2305,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chi-squre test results for total accidents in Arizona for the fall DST change (comparing before and after the DST change):\n",
+    "\n",
+    "This low critical value along with a low statistic value many times smaller, shows this test is not statistically significant. With an average p-value, we see that these two data sets may have some overlap. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -2321,7 +2330,7 @@
     }
    ],
    "source": [
-    "# Only compare the Fall accident in AZ number using chi-squre test: \n",
+    "# Only compare the spring accident in AZ number using chi-squre test: \n",
     "observed_spring_az = [805, 713]\n",
     "expected_spring_az = (805+713)/2\n",
     "chi_df_spring_az = pd.DataFrame([observed_spring_az]).T\n",
@@ -2351,6 +2360,15 @@
    ],
    "source": [
     "stats.chisquare(chi_df_spring_az['observed_spring_az'], chi_df_spring_az['expected_spring_az'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chi-squre test results for total accidents in Arizona for the sping DST change (comparing before and after the DST change):\n",
+    "\n",
+    "This low critical value along with a high statistic value, shows this test is statistically significant. With a low p-value, we see that these two data sets are going to have little overlap and be more unique. "
    ]
   },
   {
