--- a/california_merge_df.ipynb
+++ b/california_merge_df.ipynb
@@ -1464,7 +1464,7 @@
    "source": [
     "Chi-squre test results for total accidents in California for the fall DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a high statistic value many times greater, shows this test is statistically significant. With a very small p-value, we see that these two data sets are very different. "
+    "This low critical value along with a high statistic value many times greater, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are very different. "
    ]
   },
   {
@@ -1531,7 +1531,7 @@
    "source": [
     "Chi-squre test results for total accidents in California for the spring DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a low statistic value, smaller than the critical value, shows this test is not statistically significant. With a realatively large p-value, we see that these two data sets are more similar than different, somewhat overlapping. "
+    "This low critical value along with a low statistic value, smaller than the critical value, shows this test is not statistically significant. With a realatively large pvalue, we see that these two data sets are more similar than different, somewhat overlapping. "
    ]
   },
   {
@@ -1761,7 +1761,7 @@
    "source": [
     "Chi-squre test results for level 2 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a low statistic value, shows this test is not statistically significant. With a smaller p-value, we see that these two data sets are not too similar. "
+    "This low critical value along with a low statistic value, shows this test is not statistically significant. With a smaller pvalue, we see that these two data sets are not too similar. "
    ]
   },
   {
@@ -1815,7 +1815,7 @@
    "source": [
     "Chi-squre test results for level 2 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a very high statistic value, shows this test is statistically significant. With a very small p-value, we see that these two data sets are not similar, they would not have much overlap. "
+    "This low critical value along with a very high statistic value, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are not similar, they would not have much overlap. "
    ]
   },
   {
@@ -1932,7 +1932,7 @@
    "source": [
     "Chi-squre test results for level 4 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a very low statistic value many times smaller, shows this test is not statistically significant. With a large p-value, we see that these two data sets are very similar. "
+    "This low critical value along with a very low statistic value many times smaller, shows this test is not statistically significant. With a large pvalue, we see that these two data sets are very similar. "
    ]
   },
   {
@@ -1986,7 +1986,7 @@
    "source": [
     "Chi-squre test results for level 4 severity accidents in California for the fall DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a low statistic value, shows this test is not statistically significant. With an average p-value, we see that these two data sets might have some overlap. "
+    "This low critical value along with a low statistic value, shows this test is not statistically significant. With an average pvalue, we see that these two data sets might have some overlap. "
    ]
   },
   {
@@ -2310,7 +2310,7 @@
    "source": [
     "Chi-squre test results for total accidents in Arizona for the fall DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a low statistic value many times smaller, shows this test is not statistically significant. With an average p-value, we see that these two data sets may have some overlap. "
+    "This low critical value along with a low statistic value many times smaller, shows this test is not statistically significant. With a higher pvalue, we see that these two data sets may have some overlap. "
    ]
   },
   {
@@ -2368,7 +2368,7 @@
    "source": [
     "Chi-squre test results for total accidents in Arizona for the sping DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a high statistic value, shows this test is statistically significant. With a low p-value, we see that these two data sets are going to have little overlap and be more unique. "
+    "This low critical value along with a high statistic value, shows this test is statistically significant. With a low pvalue, we see that these two data sets are going to have little overlap and be more unique. "
    ]
   },
   {
