--- a/california_merge_df.ipynb
+++ b/california_merge_df.ipynb
@@ -1464,7 +1464,9 @@
    "source": [
     "Chi-squre test results for total accidents in California for the fall DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a high statistic value many times greater, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are very different. "
+    "This low critical value along with a high statistic value many times greater, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are very different. \n",
+    "\n",
+    "Pvalue: measures the probability of obtaining the observed results, assuming that the null hypothesis is true. The lower the p-value, the greater the statistical significance of the observed difference. A p-value of 0.05 or lower is generally considered statistically significant."
    ]
   },
   {
@@ -1815,7 +1817,7 @@
    "source": [
     "Chi-squre test results for level 2 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a very high statistic value, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are not similar, they would not have much overlap. "
+    "This low critical value along with a very high statistic value, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are not similar, they would not have much overlap. The pvalue shows statistical significance! "
    ]
   },
   {
@@ -2368,7 +2370,7 @@
    "source": [
     "Chi-squre test results for total accidents in Arizona for the sping DST change (comparing before and after the DST change):\n",
     "\n",
-    "This low critical value along with a high statistic value, shows this test is statistically significant. With a low pvalue, we see that these two data sets are going to have little overlap and be more unique. "
+    "This low critical value along with a high statistic value, shows this test is statistically significant. With a low pvalue, we see that these two data sets are going to have little overlap and be more unique. The pvalue shows statistical significance! "
    ]
   },
   {
