--- a/california_merge_df.ipynb
+++ b/california_merge_df.ipynb
@@ -2582,10 +2582,17 @@
    "source": [
     "Final observations:\n",
     "\n",
-    "Our alternate hypothesis was proved in the measures of overall accident frequency, non-severe accident frequency, and severe accident frequency, but this was proved only in the Fall \"DST off\" event and not in the Spring \"DST on\" event. \n",
+    "Our alternate hypothesis was proved in the measures of overall accident frequency, non-severe accident frequency, and severe accident frequency, but this was proved in the Fall \"DST off\" event and surprised us in the Spring \"DST on\" event, when we saw the control data. \n",
     "\n",
     "Useful public warning information regarding Fall Daylight Savings time change is: \"In the 10 days after the November time change each year, the chances of being in an accident, whether severe or not, are increased by 15% from the prior 10 days\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
