--- a/california_merge_df.ipynb
+++ b/california_merge_df.ipynb
@@ -1815,7 +1815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chi-squre test results for level 2 severity accidents in California for the spring DST change (comparing before and after the DST change):\n",
+    "Chi-squre test results for level 2 severity accidents in California for the fall DST change (comparing before and after the DST change):\n",
     "\n",
     "This low critical value along with a very high statistic value, shows this test is statistically significant. With an extremely small pvalue, we see that these two data sets are not similar, they would not have much overlap. The pvalue shows statistical significance! "
    ]
